# mhc

./: Makefile  README.org  hslex.hs  hsyacc.hs  lambda.hs  mhc.cabal  mhc.hs  mhc.toml  mhcgenhslexlexing.hs  mhcgenhsyacclexing.hs  mhcgenhsyaccparsing.hs  mhcgenlex.hs  stack.yaml
Control/Monad/: CodeGenerating.hs  Identity.hs  State.hs  Trans.hs
Control/Monad/Trans/: CodeGenerating.hs  State.hs
Data/: DList.hs  JSON.hs  RBMap.hs  RBSet.hs  Scheme.hs  TOML.hs
Data/JSON/: Lexing.hs  Lexing.hsl  Parsing.hs  Parsing.hsy
Data/Scheme/: Lexing.hs  Lexing.hsl  Parsing.hs  Parsing.hsy
Data/TOML/: Lexing.hs  Lexing.hsl  Parsing.hs  Parsing.hsy
Language/: Haskell2010.hs  HsLex.hs  HsYacc.hs
Language/Haskell2010/: Layout.hs  Lexing.hs  Lexing.hsl  Parsing.hs  Parsing.hsy  QId.hs  QId.hsl
Language/HsLex/: Lexing.hs  Lexing.hsl  Parsing.hs  Parsing.hsy
Language/HsYacc/: Lexing.hs  Lexing.hsl  Parsing.hs  Parsing.hsy
MHC/: Lexing.hs
examples/: Hello.hs  Stack.hs  StackWithLayoutExpanded.hs
examples/hello/: Hello.hs  hello.toml
examples/lambda/: Lexing.hs  Lexing.hsl  Main.hs  Parsing.hs  Parsing.hsy  s.lam
haskell2010/: haskell2010.toml
haskell2010/Control/: Monad.hs
haskell2010/Data/: List.hs
test/hsyacc/: MysteriousConflicts.hsy
tools/: hslex.hs  hstokenize.hs  hsyacc.hs  mhc.hs
