name: mhc
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: .
  default-language: Haskell2010
  build-depends: base
  ghc-options: -Wall -Werror -O3 -Wno-unused-matches -Wno-incomplete-patterns
  default-extensions: Safe, Strict, StrictData
  exposed-modules:
      Control.Monad.CodeGenerating
    , Control.Monad.Identity
    , Control.Monad.Trans
    , Control.Monad.Trans.CodeGenerating
    , Control.Monad.Trans.State
    , Control.Monad.State
    , Data.DList
    , Data.RBMap
    , Data.RBSet
    , Language.HsLex
    , Language.HsLex.Lexing
    , Language.HsLex.Parsing
    , Language.HsYacc
    , Language.HsYacc.Lexing
    , Language.HsYacc.Parsing

executable mhc
  hs-source-dirs: .
  main-is: mhc.hs
  default-language: Haskell2010
  build-depends: base, mhc
  ghc-options: -Wall -Werror -O3 -Wno-unused-matches -Wno-incomplete-patterns
  default-extensions: Safe, Strict, StrictData
  other-modules:
      Control.Monad.CodeGenerating
    , Control.Monad.Identity
    , Control.Monad.Trans
    , Control.Monad.Trans.CodeGenerating
    , Control.Monad.Trans.State
    , Control.Monad.State
    , Data.DList
    , Data.RBMap
    , Data.RBSet

executable hslex
  hs-source-dirs: .
  main-is: hslex.hs
  default-language: Haskell2010
  build-depends: base, mhc
  ghc-options: -Wall -Werror -O3 -Wno-unused-matches -Wno-incomplete-patterns
  default-extensions: Safe, Strict, StrictData
  other-modules:
      Control.Monad.CodeGenerating
    , Control.Monad.Identity
    , Control.Monad.Trans
    , Control.Monad.Trans.CodeGenerating
    , Control.Monad.Trans.State
    , Control.Monad.State
    , Data.DList
    , Data.RBMap
    , Data.RBSet
    , Language.HsLex
    , Language.HsLex.Lexing
    , Language.HsLex.Parsing

executable hsyacc
  hs-source-dirs: .
  main-is: hsyacc.hs
  default-language: Haskell2010
  build-depends: base, mhc
  ghc-options: -Wall -Werror -O3 -Wno-unused-matches -Wno-incomplete-patterns
  default-extensions: Safe, Strict, StrictData
  other-modules:
      Control.Monad.CodeGenerating
    , Control.Monad.Identity
    , Control.Monad.Trans
    , Control.Monad.Trans.CodeGenerating
    , Control.Monad.Trans.State
    , Control.Monad.State
    , Data.DList
    , Data.RBMap
    , Data.RBSet
    , Language.HsYacc
    , Language.HsYacc.Lexing
    , Language.HsYacc.Parsing
